<resources>
    <string name="app_name">찍어썸</string>
    <string name="email">이메일</string>
    <string name="password">비밀번호</string>
    <string name="login">로그인</string>
    <string name="signup">회원가입</string>
    <string name="name">성명 혹은 매장이름</string>
    <string name="checkpassword">비밀번호 확인</string>
    <string name="id">아이디</string>
    <string name="confirm_num">인증번호</string>
    <string name="keeplogin">로그인 상태 유지</string>
    <string name="member">일반회원</string>
    <string name="manager">매니저회원</string>
    <string name="qrcode">QR코드 인증</string>
    <string name="completeqr">스탬프 찍기 완료</string>
    <string name="insertedEmail">등록한 이메일을 입력해 주세요.</string>
    <string name="insertedidEmail">등록한 아이디와 이메일 인증을 해주세요.</string>
    <string name="insertedPassword">새로운 비밀번호을 입력해 주세요.</string>
    <string name="confirm">확인</string>
    <string name="findid">아이디 찾기</string>
    <string name="resetpw">비밀번호 재설정</string>
    <string name="gotomystamp">마이 스탬프 보기</string>
    <string name="gotobuycoupon">쿠폰 사러 가기</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
