<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="kr.co.company.jjigawesome.FindPWActivity"
    android:orientation="vertical"
    android:background="#f6f6f6">

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="68.33dp"
        android:background="#ffffff">

        <TextView
            android:id="@+id/textview_findpw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:fontFamily="@font/notosans"
            android:text="@string/resetpw"
            android:textColor="#000000"
            android:textSize="15.33sp" />

        <Button
            android:id="@+id/button_findpw_finish"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="22.00dp"
            android:background="@drawable/btn_del" />

    </RelativeLayout>

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="0.67dp"
        android:background="#b2b2b2" />



    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/insertedidEmail"
            android:textSize="13.33sp"
            android:fontFamily="@font/notosans"
            android:textColor="#000000"/>

        <EditText
            android:id="@+id/edit_findpw_id"
            android:layout_width="290.33dp"
            android:layout_height="46.33dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="12.67dp"
            android:background="@drawable/btn_line_nor"
            android:fontFamily="@font/notosans"
            android:hint="@string/id"
            android:textColorHint="#cacaca"
            android:textSize="13.33sp"
            android:inputType="text"
            android:paddingLeft="12.67dp" />

        <LinearLayout
            android:layout_width="290.33dp"
            android:layout_height="46.33dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10.67dp"
            android:orientation="horizontal"
            android:background="@drawable/btn_line_nor">

            <EditText
                android:id="@+id/edit_findpw_email"
                android:layout_width="204.33dp"
                android:layout_height="46.33dp"
                android:layout_gravity="center_horizontal"
                android:background="@null"
                android:fontFamily="@font/notosans"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:paddingLeft="18.33dp"
                android:textColorHint="#cacaca"
                android:textSize="13.33sp" />

            <Button
                android:id="@+id/button_findpw_sendnumber"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/btn_sendnumber"/>
        </LinearLayout>


        <LinearLayout
            android:layout_width="290.33dp"
            android:layout_height="46.33dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10.67dp"
            android:orientation="horizontal"
            android:background="@drawable/btn_line_nor">

            <EditText
                android:id="@+id/edit_findpw_confirm"
                android:layout_width="222.33dp"
                android:layout_height="46.33dp"
                android:layout_gravity="center_horizontal"
                android:background="@null"
                android:fontFamily="@font/notosans"
                android:hint="@string/confirm_num"
                android:inputType="numberPassword"
                android:paddingLeft="18.33dp"
                android:textColorHint="#cacaca"
                android:textSize="13.33sp" />

            <Button
                android:id="@+id/button_findpw_confirm"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/btn_phone_nor"/>

        </LinearLayout>

        <Button
            android:id="@+id/button_findpw_reset"
            android:layout_width="290.33dp"
            android:layout_height="46.33dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10.67dp"
            android:background="@drawable/btn_b_nor"
            android:fontFamily="@font/notosans"
            android:gravity="center"
            android:text="@string/confirm"
            android:textColor="#ffffff"
            android:textSize="13.33sp" />



    </LinearLayout>

</LinearLayout>
