<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_qrcode_02"
    android:orientation="vertical"
    tools:context="kr.co.company.jjigawesome.CompleteQrcodeActivity">

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="68.33dp"
        android:background="#ffffff">

        <TextView
            android:id="@+id/textview_complete_qr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:fontFamily="@font/notosans"
            android:text="@string/completeqr"
            android:textColor="#000000"
            android:textSize="15.33dp" />

        <Button
            android:id="@+id/button_complete_finish"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="22.00dp"
            android:background="@drawable/btn_del" />

    </RelativeLayout>

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="0.67dp"
        android:background="#b2b2b2" />
    
    <Space
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="97.67dp" />
    
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="203.67dp"
        android:src="@drawable/bg_qrcode_02_stamp"/>

    <Space
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="106.33dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/button_complete_mystamp"
            android:layout_width="290.33dp"
            android:layout_height="46.33dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/btn_b_nor"
            android:text="@string/gotomystamp"
            android:textSize="13.33dp"
            android:gravity="center"
            android:textColor="#ffffff"
            android:fontFamily="@font/notosans"/>

        <Button
            android:id="@+id/button_complete_buystamp"
            android:layout_width="290.33dp"
            android:layout_height="46.33dp"
            android:layout_marginTop="10.67dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/btn_b_nor"
            android:text="@string/gotobuycoupon"
            android:textSize="13.33dp"
            android:gravity="center"
            android:textColor="#ffffff"
            android:fontFamily="@font/notosans"/>
    </LinearLayout>


    <Space
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="60.67dp" />

</LinearLayout>
