<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_login"
    android:orientation="vertical"
    tools:context="kr.co.company.jjigawesome.LoginActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="210.67dp"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical">

        <EditText
            android:id="@+id/edit_login_id"
            android:layout_width="290.33dp"
            android:layout_height="46.33dp"
            android:background="@drawable/btn_w_nor"
            android:hint="@string/id"
            android:textSize="13.33dp"
            android:paddingLeft="18.33dp"
            android:textColorHint="#cacaca"
            android:fontFamily="@font/notosans"
            android:inputType="textEmailAddress"/>

        <EditText
            android:id="@+id/edit_login_password"
            android:layout_width="290.33dp"
            android:layout_height="46.33dp"
            android:layout_marginTop="10.67dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/btn_w_nor"
            android:hint="@string/password"
            android:textSize="13.33dp"
            android:paddingLeft="18.33dp"
            android:textColorHint="#cacaca"
            android:fontFamily="@font/notosans"
            android:inputType="textPassword"/>

        <LinearLayout
            android:layout_marginTop="17.67dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <CheckBox
                android:id="@+id/checkbox_login"
                android:layout_width="17dp"
                android:layout_height="17dp"
                android:background="@drawable/check_box"
                android:button="@null"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="로그인 상태 유지"
                android:textSize="13.33dp"
                android:paddingLeft="18.33dp"
                android:textColor="#ffffff"
                android:fontFamily="@font/notosans"/>

        </LinearLayout>

    </LinearLayout>

    
    <Button
        android:id="@+id/button_login"
        android:layout_width="290.33dp"
        android:layout_height="46.33dp"
        android:layout_marginTop="22.00dp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/btn_b_nor"
        android:text="@string/login"
        android:textSize="13.33dp"
        android:gravity="center"
        android:textColor="#ffffff"
        android:fontFamily="@font/notosans"/>

    <LinearLayout
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:layout_width="96.67dp"
            android:layout_height="45.67dp"
            android:background="@drawable/btn_findid"/>

        <Button
            android:layout_width="96.67dp"
            android:layout_height="45.67dp"
            android:background="@drawable/btn_findpassword"/>

        <Button
            android:layout_width="96.67dp"
            android:layout_height="45.67dp"
            android:background="@drawable/btn_signup"/>
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="74.67dp"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <Button
            android:layout_width="44.33dp"
            android:layout_height="44.33dp"
            android:background="@drawable/btn_facebook_login"/>
        <Space
            android:layout_width="44.33dp"
            android:layout_height="match_parent"/>
        <Button
            android:layout_width="44.33dp"
            android:layout_height="44.33dp"
            android:background="@drawable/btn_google_login"/>
    </LinearLayout>


</LinearLayout>
